# timelapse

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  shotmac.py  testrun.py  timelapse.py
src/timelapse/: __init__.py  __main__.py  cli.py  collect.py  config.py  render.py  shotmac.py  tui.py
timelapse/: cli.py  collect.py  config.py  render.py  shotmac.py
